fix home page alignment

--- a/src/pages/home/HeroImage.module.css
+++ b/src/pages/home/HeroImage.module.css
@@ -1,7 +1,7 @@
 .heroImageContainer {
   width: 100%;
   max-width: 1600px;
-  margin: 5em 0;
+  margin: 5em auto;
   height: max(40vh, 40vw);
   max-height: 700px;
   position: relative;
